--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,3 @@
 {
-    "extends": [
-        "react-app",
-        "react-app/jest"
-    ],
-    "rules": {
-        "no-console" : "error"
-    }
+  "extends": ["react-app", "react-app/jest"]
 }
